--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,26 @@
-html, body {
+html,
+body,
+#root {
   width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgb(48, 48, 48);
+}
+
+.wrapper {
+  background-color: white;
+  width: 80%;
+  max-width: 300px;
+  height: 200px;
+  box-sizing: border-box;
+  padding: 4rem;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.wrapper section {
+  flex: 1;
 }
